--- a/src/style/index/index.css
+++ b/src/style/index/index.css
@@ -9,7 +9,14 @@
     align-items : center;
 
     border: 10px solid white;
+    border-radius: 10px;
 
+    margin-top: 15%;
+    margin-bottom: 25%;
     margin-left: 25%;
     margin-right: 25%;
+
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
 }
